name:                hrel-sql
version:             0
build-type:          Simple
cabal-version:       >= 2

library
  default-language:    Haskell2010
  ghc-options:         -Wall -Wextra -Wno-name-shadowing
  build-depends:       base, text, pretty
  hs-source-dirs:      lib
  exposed-modules:     Lib
                       Language.SQL.Syntax
